--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@nguniversal/express-engine": "^14.2.0",
     "express": "^4.15.2",
+    "ngx-owl-carousel-o": "^14.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
