--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve -p $PORT",
+    "start": "npm start",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
