--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve -p $PORT",
+    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -29,8 +29,9 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@nguniversal/express-engine": "^14.2.0",
-    "express": "^4.15.2",
+    "express": "^4.18.2",
     "ngx-owl-carousel-o": "^14.0.1",
+    "path": "^0.12.7",
     "rxjs": "~7.5.0",
     "tasktimer": "^3.0.0",
     "tslib": "^2.3.0",
