--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "path": "^0.12.7",
     "rxjs": "~7.5.0",
     "tasktimer": "^3.0.0",
+    "ts-evaluator": "^1.0.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
